--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
-<p>
-  Dashboard Komponente...
-</p>
+<div class="containers">
+  <!-- https://angular-2-training-book.rangle.io/components/app_structure_with_components/passing_data_into_components -->
+  <app-container topicName="TypeScript" questionsAmount=10>
+  </app-container>
+
+  <app-container topicName="Angular2" questionsAmount=10>
+  </app-container>
+
+  <app-container topicName="Weather" questionsAmount=5 weatherReportsAmount=5>
+  </app-container>
+
+</div>
